--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
   </p>
   <small>
     © joi.how 2024 / Commit
-    <a href="https://github.com/pupgray/walltaker/commit %>">#<%= ENV['HEROKU_SLUG_COMMIT'].present? ? ENV['HEROKU_SLUG_COMMIT'][0..8] : '' %> <%= (time_ago_in_words Time.new( ENV['HEROKU_RELEASE_CREATED_AT'])) + " ago" if ENV['HEROKU_RELEASE_CREATED_AT'].present? %></a>
+    <a href="https://github.com/pupgray/walltaker/commit">#<%= ENV['HEROKU_SLUG_COMMIT'].present? ? ENV['HEROKU_SLUG_COMMIT'][0..8] : '' %> <%= (time_ago_in_words Time.new( ENV['HEROKU_RELEASE_CREATED_AT'])) + " ago" if ENV['HEROKU_RELEASE_CREATED_AT'].present? %></a>
     <% if current_user && current_user.admin %>
       <%= link_to blazer_path do %>
         <ion-icon role="presentation" name="stats-chart"></ion-icon>
