--- a/app/views/mod_tools/show_recent_events.html.erb
+++ b/app/views/mod_tools/show_recent_events.html.erb
@@ -20,7 +20,7 @@
         <%= event.visit.banned_ip.present? ? "❌ IPBANNED BY #{event.visit.banned_ip.banned_by.username.upcase}" : '' %>
         <%= event.visit.ip %><br/>
         <% if event.user %>
-          <%= link_to "Caused by #{event.user.username}",  mod_tools_users_index_url(email: event.user.email) %>
+          <%= link_to "Caused by #{event.user.username}", mod_tools_users_index_url(email: event.user.email) %>
         <% else %>
           <strong>Caused by ⚠️ Anon!</strong>
         <% end %>
@@ -29,7 +29,10 @@
           <%= link_to "https://e621.net/posts/#{event.properties['attempted_post_id']}", "https://e621.net/posts/#{event.properties['attempted_post_id']}", target: '_blank' %>
         <% end %>
         <% if event.properties.key? 'past_link_id' %>
-          <%= image_tag PastLink.find_by_id(event.properties['past_link_id'])&.post_thumbnail_url, width: 320 %>
+          <% past_link = PastLink.find_by_id(event.properties['past_link_id']) %>
+          <% if past_link %>
+            <%= image_tag past_link.post_thumbnail_url, width: 320 %>
+          <% end %>
         <% end %>
         <code><%= event.properties %></code>
       </td>
