add chewtoy/walltaker-engine to client list

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -152,6 +152,10 @@
     (Linux)
   </li>
   <li>
+    <a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a>
+    (Windows)
+  </li>
+  <li>
     <a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a>
     (MacOS)
   </li>
