remove false browse page info in the orgasm text

--- a/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
+++ b/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
@@ -11,7 +11,7 @@
       </h2>
 
       <p>
-        A logged orgasm is recorded on your public profile, and will benefit your ranking on the browse page! It's also just fun.
+        An orgasm will be recorded on your public profile for everyone to see! It's fun!
       </p>
 
       <div class="flashes">
