--- a/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
+++ b/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
@@ -21,9 +21,9 @@
           </div>
         <% end %>
       </div>
-      
+
       <h3>Credit a user for causing this orgasm</h3>
-      <%= form.text_field :caused_by_username, placeholder: 'Optional', class:"orgasms__credit_to_user" %>
+      <%= form.select :caused_by_username, friends.map {|f| f.other_user(current_user).username} << nil, class:"orgasms__credit_to_user" %>
       
       <h3>Satisfaction rating for this orgasm</h3>
       <div class="orgasms__rating">
