Tweak to the selection list

--- a/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
+++ b/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
@@ -22,9 +22,18 @@
         <% end %>
       </div>
 
+      <%
+        options = grouped_options_for_select({
+                                               Friends: friends.map { |u| u.username },
+                                               'Recent Interactions': recent_setters.map { |u| u.username }
+                                             })
+      %>
+
       <h3>Credit a user for causing this orgasm</h3>
-      <%= form.select :caused_by_username, possible_causers.map {|u| u.username} << nil, class:"orgasms__credit_to_user" %>
-      
+      <%= form.label :caused_by_username, class: 'form__row' do %>
+        <%= form.select :caused_by_username, options, include_blank: "No Credit" %>
+      <% end %>
+
       <h3>Satisfaction rating for this orgasm</h3>
       <div class="orgasms__rating">
         <div class="orgasms__rating__option">
