--- a/nuttracker/app/views/nuttracker/orgasms/new.html.erb
+++ b/nuttracker/app/views/nuttracker/orgasms/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New orgasm</h1>
 
-<%= render "form", orgasm: @orgasm, possible_causers: @possible_causers %>
+<%= render "form", orgasm: @orgasm, friends: @friends, recent_setters: @recent_setters %>
 
 <br>
 
