--- a/app/views/application/_notifications.html.erb
+++ b/app/views/application/_notifications.html.erb
@@ -25,6 +25,8 @@
                 <ion-icon role="presentation" name="people"></ion-icon>
               <% when 'new_message' %>
                 <ion-icon role="presentation" name="mail-unread"></ion-icon>
+              <% when 'orgasm_credited_to_you' %>
+                <ion-icon role="presentation" name="ice-cream"></ion-icon>
             <% end %>
             <div>
               <p><%= notification.text %></p>
