Fix shitty grammar

--- a/app/views/link_wizard/control.html.erb
+++ b/app/views/link_wizard/control.html.erb
@@ -68,7 +68,7 @@
   <blockquote>
     <div><%= image_tag 'mascot/TaylorHead.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
     <p>
-      <strong><%= current_user.username.capitalize %>, could you choose the level of control you'd like by default?</strong> Keeping in mine people like him exist. I've highlighted the one most people choose for you, but if you're new, I suggest going 1 level up.
+      <strong><%= current_user.username.capitalize %>, could you choose the level of control you'd like by default?</strong> Keeping in mind people like him (<%= image_tag 'mascot/WarrenHead.png', size: '25' %>) exist. I've highlighted the one most people choose for you, but if you're new, I suggest going 1 level up.
     </p>
   </blockquote>
 
