--- a/app/views/link_wizard/gender.html.erb
+++ b/app/views/link_wizard/gender.html.erb
@@ -104,7 +104,7 @@
 
       <div class="form__row">
         <%= f.check_box :blacklisted_parts, {multiple: true}, :cloacas, '' %>
-        <%= f.label :blacklisted_parts, 'Cloacas (its e621 after all)' %>
+        <%= f.label :blacklisted_parts, 'Cloacas (it\'s e621 after all)' %>
       </div>
 
 
