--- a/app/views/link_wizard/surprise.html.erb
+++ b/app/views/link_wizard/surprise.html.erb
@@ -22,14 +22,14 @@
   <blockquote>
     <div><%= image_tag 'mascot/WarrenHead.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
     <p>
-      Sometimes, you want people to just pick what they think you'll get off too. Other times, you might want to just
-      focus on a specific topic.
+      Sometimes, you want people to surprise you with what they think you'll get off too. Other times, you might want to
+      restrict the options to a specific theme.
     </p>
   </blockquote>
 
   <blockquote class="right">
     <p>
-      It's a good question to ask yourself! You might have different links you use. Maybe one for "surprises", and
+      It's a good question to ask yourself! You might use different links for different moods. Maybe one for "surprises", and
       another one for a specific... kink... or... somethi-... Warren. <strong>Focus.</strong>
     </p>
     <div><%= image_tag 'mascot/TaylorHead.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
@@ -38,7 +38,7 @@
   <blockquote>
     <div><%= image_tag 'mascot/WarrenHeadHorny.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
     <p>
-      Yeah... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I&nbsp;am.
+      Yeah... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I&nbsp;am.
     </p>
     <div><%= image_tag 'mascot/TaylorTits.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
   </blockquote>
@@ -61,7 +61,7 @@
 
   <blockquote class="right">
     <p>
-      They're that good, <%= current_user.username.capitalize %>!~ It let you grope a bit, but you know... computers?
+      They're that good, <%= current_user.username.capitalize %>!~ I'd let you grope a bit, but you know... computers?
       <strong>Are you interested in a theme tag? Warren left some suggestions for you.</strong>
     </p>
     <div><%= image_tag 'mascot/TaylorHead.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
