@cant77 suggested tweak

--- a/app/views/link_wizard/no_fun.html.erb
+++ b/app/views/link_wizard/no_fun.html.erb
@@ -19,7 +19,7 @@
   <blockquote>
     <div><%= image_tag 'mascot/TaylorHead.png', alt: 'Two link mages crafting your link.', class: 'mascot', width: 70 %></div>
     <p>
-      Walltaker is all about controlled chaos and horny surprises. But sometimes you might not want to give up all control to just... anyone (<%= image_tag 'mascot/WarrenHead.png', size: '25' %>) on the internet.
+      Walltaker is all about controlled transfer of control. (and horny surprises.) But sometimes you might not want to give up all control to just... anyone (<%= image_tag 'mascot/WarrenHead.png', size: '25' %>) on the internet.
     </p>
   </blockquote>
 
