--- a/public/user-profile.css
+++ b/public/user-profile.css
@@ -70,10 +70,24 @@ h2 > span > .text-charm__medal:hover {
     text-decoration: none;
 }
 
+#api_key_form,
+.orgasms-log{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .api-key {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+}
+
+.api-key form.button_to {
+    position: relative;
+    width: 100%;
+    display: block;
 }
 
 .api-key__key {
@@ -156,6 +170,13 @@ form.orgasms input[type=submit] {
 }
 
 form.orgasms .form__row {
+    justify-content: center;
+}
+
+.form__group {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
