--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -87,6 +87,9 @@
 
 
 <% if @is_current_user %>
+  <div class="one-col">
+    <%= turbo_frame_tag 'settings', src: settings_path %>
+  </div>
   <div class="two-col">
     <%= turbo_frame_tag 'orgasm_form', src: '/nut/orgasms/new' %>
     <%= turbo_frame_tag 'api_key_form', class: "accent-block" do %>
@@ -95,27 +98,29 @@
         Only you see this
       </div>
 
-      <h2>
-        <ion-icon role="presentation" name="key" class="big"></ion-icon>
-        Your API key
-      </h2>
+      <div>
+        <h2>
+          <ion-icon role="presentation" name="key" class="big"></ion-icon>
+          Your API key
+        </h2>
 
-      <p>
-        Use this key to grant special powers to a client you're using. It does not grant full access to your account,
-        but does allow clients to set a response on links on your behalf.
-        <strong>You can only have 1 API key at once.</strong> When you randomize a new one, the old one will stop
-        working.
-      </p>
+        <p>
+          Use this key to grant special powers to a client you're using. It does not grant full access to your account,
+          but does allow clients to set a response on links on your behalf.
+          <strong>You can only have 1 API key at once.</strong> When you randomize a new one, the old one will stop
+          working.
+        </p>
+      </div>
 
       <div class="api-key" data-controller="api-key-form">
         <% if @user.api_key.present? %>
           <div class="api-key__key" data-api-key-form-target="key">
             <ion-icon role="presentation" name="key" class="big"></ion-icon><%= @user.api_key %></div>
-          <%= button_to user_new_api_key_path(current_user.username), class: 'danger-button' do %>
+          <%= button_to user_new_api_key_path(current_user.username), class: 'danger-button accent-block__button' do %>
             Give me a new one
           <% end %>
         <% else %>
-          <%= button_to user_new_api_key_path(current_user.username) do %>
+          <%= button_to user_new_api_key_path(current_user.username), class: 'accent-block__button' do %>
             Generate my API key
           <% end %>
         <% end %>
