--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <% mascot = current_user&.mascot || 'ki' %>
 <!DOCTYPE html>
-<html>
+<html class="<%= current_user ? "force-#{current_user.colour_preference}" : "" %>">
 <head>
   <title><%= content_for?(:html_title) ? yield(:html_title) : "Walltaker" %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
