--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -116,67 +116,73 @@
   account. Enter your username, and then go about your day!
 </p>
 
-<%= inline_svg_tag "wt.svg", class: "explainer_graphic", aria: true, title: "A flow chart, showing links pushing updates to devices running walltaker clients.", width: '100%'%>
+<%= inline_svg_tag "wt.svg", class: "explainer_graphic", aria: true, title: "A flow chart, showing links pushing updates to devices running walltaker clients.", width: '100%' %>
 
 <h2 id="companion-apps">Clients</h2>
 <table>
   <thead>
-    <tr>
-      <th>Client</th>
-      <th>Platform</th>
-    </tr>
+  <tr>
+    <th>Client</th>
+    <th>Platform</th>
+  </tr>
   </thead>
   <tbody>
-   <tr>
-      <td><a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank">Desktop
-        Client</a></td>
-      <td>Windows / Linux</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
-        Client</a></td>
-      <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a></td>
-      <td>Windows</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank">Android
-        Client</a></td>
-      <td>Android 12+</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
-      <td>Android</td>
-    </tr>
-    <tr>
-      <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a></td>
-      <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a></td>
-      <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
-      <td>Linux</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a></td>
-      <td>macOS</td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a></td>
-      <td>iOS</td>
-    </tr>
+  <tr>
+    <td><a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
+      Client</a></td>
+    <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a>
+    </td>
+    <td>Windows</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
+    <td>Android</td>
+  </tr>
+  <tr>
+    <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a></td>
+    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a></td>
+    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
+    <td>Linux</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a></td>
+    <td>macOS</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a></td>
+    <td>iOS</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank" style="color: var(--text-light)">Android
+      Client</a>
+      <br/><strong>Unmaintained</strong> try other clients first.</td>
+    <td>Android 12+</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank" style="color: var(--text-light)">Desktop
+      Client</a>
+      <br/><strong>Unmaintained</strong> try other clients first.
+    </td>
+    <td>Windows / Linux</td>
+  </tr>
   </tbody>
 </table>
 
 <h2 id="extra-apps">Companion/Explorer Apps</h2>
-<p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user experience cleaner.</p>
+<p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user
+  experience cleaner.</p>
 <ul>
-  <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gio's Explorer</a> (Android)</li>
+  <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gio's Explorer</a> (Android)
+  </li>
 </ul>
 
 <h2>Help us out!</h2>
