add walltaker-for-walltaker client

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -13,6 +13,7 @@
   android_changer: :mobile,
   jberliner: :desktop,
   chewtoy: :desktop,
+  kemkem_userscript: :desktop,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
